2004-01-24  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome26.modules: Remove a lot of cruft that
	never should have been here in the first place. mcs, mono,
	gtk-sharp, gtkglarea, regexxer. Mono and mcs had no chance
	of compiling at all, and requires mono being installed
	anyway so why compile it from scratch?

2004-01-20  Xavier Ordoquy  <xordoquy@wanadoo.fr>

	* modulesets/gnome26.modules: sodipodi depends on libgnomeprintui
	and not libgnomeprintui-2.0 that has been removed.

2004-01-19  Jon K Hellan  <hellan@acm.org>

	* modulesets/gnome26.modules: Fetch libxklavier from freedesktop
	cvs, not gnome.

2004-01-18  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome26.modules: Remove fontilus since that has
	been integrated into the control-center.

2004-01-18  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome24.modules: Remove libgnomeprint[ui]-2.0 since
	nothing depends on it.
	* modulesets/gnome26.modules: Same here. Also fetch libxklavier
	from CVS instead of using a tarball.

2004-01-17  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome24.modules: Same as below.

2004-01-17  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome26.modules: Remove gael for now.
	Remove dia-newcanvas too since gael was the only user.

2004-01-17  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/freedesktop.modules: Add dep on CompositeExt to
	xserver to make it build on a fresh checkout.

2004-01-16  Kjartan Maraas  <kmaraas@gnome.org>

	* bootstrap.py: Update audiofile to 0.2.5.

2004-01-14  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* modulesets/gnome26.modules: Removed separate acme module since it's now
	part of gnome-control-center.

2004-01-12  James Henstridge  <james@daa.com.au>

	* bootstrap.py (automake-1.8): update to 1.8.1.

2004-01-09  Jon K Hellan  <hellan@acm.org>

	* modulesets/gnome26.modules: Added libxklavier dependency for
	gnome-applets. http://bugzilla.gnome.org/show_bug.cgi?id=130972.
